founder box alignment issue fixes in lower screens and other fixes

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -62,6 +62,7 @@ footer .row > div:nth-child(2), footer .row > div:nth-child(3), footer .row > di
 }
 .aboutWrapper img{
     width: 100%;
+    height: 400px
 }
 .aboutWrapper .directorsGroup{
     margin-bottom: 20px;
