--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,6 @@ body{
     border: 1px solid #E4E4E4;
     border-radius: 16px;
     margin-bottom: 25px;
-    height: 290px;
 } 
 .aboutWrapper .directorsGroup.profile-detail {
     text-align: left;
